--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <div class="header_left">
             <span class="material-symbols-outlined"> menu </span>
             <img
-                src="https://cdn.vox-cdn.com/thumbor/x1-9UwiB_BeLufaPfDTRaLrACBo=/0x0:1320x880/1200x628/filters:focal(660x440:661x441)/cdn.vox-cdn.com/uploads/chorus_asset/file/21939811/newgmaillogo.jpg"
-            />
+                src="https://cdn.vox-cdn.com/thumbor/x1-9UwiB_BeLufaPfDTRaLrACBo=/0x0:1320x880/1200x628/filters:focal(660x440:661x441)/cdn.vox-cdn.com/uploads/chorus_asset/file/21939811/newgmaillogo.jpg"/>
         </div>
         <div class="header_middle">
             <span class="material-symbols-outlined">
